# NexusTalk

./: .gitignore
backend/: CMakeLists.txt
backend/server/: CMakeLists.txt  handleData.cc  handleData.h  redisCmd.cc  redisCmd.h
frontend/: oss_server.js  package-lock.json  package.json
frontend/src/: App.vue  style.css
gateway/: package-lock.json  package.json  server.js
